Refactoring for shared caching and s3-support, work in progress.